# Travel-_Planner_Using_A2A_AG_UI

./: .gitignore  README.md
travel_planning_system/: A2A_IMPLEMENTATION_README.md  AG_UI_IMPLEMENTATION_SUMMARY.md  AG_UI_README.md  ARCHITECTURE.md  README.md  (+29 more)
travel_planning_system/car_rental_agent_langgraph/: 0.5.0  2.0.0  a2a_car_executor.py  check_dependencies.py  create_env_file.py  debug_env.py  pyproject.toml  requirements.txt  simple_car_agent.py  test_agent_direct.py  test_car_agent.py  test_endpoints.py  test_without_search.py
travel_planning_system/car_rental_agent_langgraph/app/: __init__.py  __main__.py  agent.py  agent_executor.py  simple_car_agent.py  simple_car_executor.py  simple_executor.py
travel_planning_system/hotel_booking_agent_crewai/: 0.2.0  0.3.0  0.70.0  __main__.py  a2a_hotel_executor.py  agent.py  agent_executor.py  create_env_file.py  pyproject.toml  quick_test.py  requirements.txt  simple_executor.py  simple_hotel_agent.py  simple_hotel_agent_with_logging.py  simple_hotel_executor.py  test_hotel_agent.py  test_hotel_search.py  test_location_fix.py  test_tools_direct.py
travel_planning_system/hotel_booking_agent_crewai/servers/: hotel_booking_mcp_server.py  hotel_search_mcp_server.py  serper_config.py
travel_planning_system/travel_planner_agent_adk/: 0.2.0  0.3.0  1.2.1  1.6.0  agent_communication_log.json  create_env_file.py  pyproject.toml  requirements.txt  simple_a2a_agent.py  simple_a2a_executor.py  simple_executor.py  simple_executor_with_logging.py  simple_travel_planner.py  test_logging.py  test_travel_planner.py
travel_planning_system/travel_planner_agent_adk/travel_planner/: __init__.py  agent.py  remote_agent_connection.py
